cmake_minimum_required(VERSION 3.29)
project(Problem_solving_Random)

set(CMAKE_CXX_STANDARD 20)

add_executable(Problem_solving_Random main.cpp
        "cmake-build-debug/3043. Find the Length of the Longest Common Prefix.cpp"
        "Day 2 (3043. Find the Length of the Longest Common Prefix).cpp")
